crates/cuda-macros/tests/compile_fail/cuda_module_include_kernel_boundary_items.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

#[cuda_macros::kernel]
pub fn from_include(value: u32) {
    let _ = value;
}
